feat: 完成 EPUB Tools v2 技术脚手架搭建
- 集成 mise 版本管理 (Node 22.22.0, Python 3.13.12, pnpm 10.30.3)
- 构建 pnpm monorepo 结构 (packages/core + cli + gui)
- 搭建 TypeScript + React + Tauri 技术栈
- 完成 Python 字体混淆模块骨架 (py-scripts/)
- 创建 Skills 独立脚本目录 (ts + py)
- 创建 vitest 测试框架
- 配置 GitHub Actions CI/CD (三平台测试 + Tauri 发布矩阵)
- 创建跨平台一键安装脚本 (setup.sh/setup.ps1)
- 所有包已验证可编译和运行

待实现:
- Sprint 1-5: 核心功能实现 (格式化、图片处理、字体处理等)
- Sprint 6: Tauri GUI 完整对接
- Sprint 7: 完整测试覆盖 + 文档

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,40 @@
-build
-dist
-test
-epub_tool.spec
+# === Node.js ===
+node_modules/
+dist/
+*.tsbuildinfo
+
+# === Python ===
+__pycache__/
+*.py[cod]
+*$py.class
+*.egg-info/
+.venv/
+venv/
+
+# === Rust / Tauri ===
+target/
+
+# === Build Outputs ===
+build/
+*.spec
+
+# === OS ===
+.DS_Store
+Thumbs.db
+Desktop.ini
+
+# === IDE ===
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# === Project Specific ===
 log.txt
 result.txt
-log_file
-epub_tool_TKUI.spec
-.DS_Store
+log_file/
 *.epub
-.vscode
-__pycache__/
-.pycache
+
+# === Legacy ===
+epub_tool.spec
+epub_tool_TKUI.spec
