--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -12,7 +12,7 @@
     "dev": "tsx src/index.ts",
     "clean": "rm -rf dist *.tsbuildinfo",
     "test": "vitest run --passWithNoTests",
-    "typecheck": "tsc --noEmit",
+    "typecheck": "tsc -b --noEmit",
     "lint": "eslint src/"
   },
   "dependencies": {
