feat(rust-core): sync upstream 52bc964 fixes and remove legacy TS core/cli

--- a/crates/epub-core/Cargo.toml
+++ b/crates/epub-core/Cargo.toml
@@ -31,6 +31,10 @@ quick-xml = { workspace = true }
 # Crypto
 md-5 = { workspace = true }
 
+# Regex & Encoding
+regex = { workspace = true }
+encoding_rs = { workspace = true }
+
 # HTML
 scraper = { workspace = true }
 
