--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,8 @@ tokio = { version = "1", features = ["full"] }
 zip = "2"
 quick-xml = "0.37"
 md-5 = "0.10"
+regex = "1"
+encoding_rs = "0.8"
 
 # HTML / CSS
 scraper = "0.22"
